  . support for "first/last day of <month>" style texts.
- Added functionality to SPL extension:
  . Added ability to store associative information with objects in
    SplObjectStorage. (Marcus)
  . Added ArrayAccess support to SplObjectStorage. (Marcus)
  . Added SplDoublyLinkedList, SplStack, SplQueue classes. (Etienne)
  . Added FilesystemIterator. (Marcus)
  . Added GlobIterator. (Marcus)
- Added ability to use Traversable objects instead of plain arrays in ext/soap.
  (Joshua Reese, Dmitry)
- Added stream_supports_lock() function. (Benjamin Schulz)
- Added msg_queue_exists() function. (Benjamin Schulz)
- Added 3 Firebird specific attributes that can be set via PDO::setAttribute()
  to control formatting of date/timestamp columns: PDO::FB_ATTR_DATE_FORMAT,
  PDO::FB_ATTR_TIME_FORMAT and PDO::FB_ATTR_TIMESTAMP_FORMAT. (Lars W)
- Added gmp_testbit() function from HEAD. (Stas)
- Added icon format support to getimagesize(). (Scott)
- Added LDAP_OPT_NETWORK_TIMEOUT option for ldap_set_option() to allow
  setting network timeout (FR #42837). (Jani)
- Added optional escape character parameter to fgetcsv(). (David Soria Parra)
- Added an optional parameter to strstr() and stristr() for retrieval of either
  the part of haystack before or after first occurrence of needle.
  (Johannes, Felipe)
- Added xsl->setProfiling() for profiling stylesheets. (Christian)
- Added long-option feature to getopt() and made getopt() available also on
  win32 systems by adding a common getopt implementation into core.
  (David Soria Parra, Jani)
- Added support for optional values, and = as separator, in getopt(). (Hannes)
- Added "compact" handler for Zend MM storage. (Dmitry)
- Added "+" and "*" specifiers to zend_parse_parameters(). (Andrei)
- Added lcfirst() function. (David C)

- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)

- Improved PHP runtime speed and memory usage:
  . Added garbage collector. (David Wang, Dmitry).